# Raccoon

./: .gitignore  Makefile  README.md  parameters.txt
Makerbot-Lanepainter/: PktProtocol.cpp  PktProtocol.h  UART.cpp  UART.h  main.cpp
Makerbot-Lanepainter.xcodeproj/: project.pbxproj
Makerbot-Lanepainter.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Raccoon_Firmware/: Compass.cpp  Compass.h  PktProtocol.cpp  PktProtocol.h  Raccoon_Firmware.ino  SerialComm.cpp  SerialComm.h  StepMotor.cpp  StepMotor.h
Raccoon_Raspi/: PktArduino.cpp  PktProtocol.h  main.cpp
Raccoon_Raspi.xcodeproj/: project.pbxproj
Raccoon_Raspi.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
arduino_rc/: RC.ino
firmware/: CMakeLists.txt  Compass.cpp  Compass.h  GpsModule.cpp  GpsModule.h  PktProtocol.cpp  PktProtocol.h  SerialComm.cpp  SerialComm.h  StepMotor.cpp  StepMotor.h  debug.h  firmware.ino
firmware_servo/: CMakeLists.txt  PktProtocol.h  SerialComm.cpp  debug.h  firmware_servo.ino
python/: algorithm_v3_0810.py  candidate_1.py  candidate_2.py  frames_to_mp4.bat  frames_to_mp4.sh  mp4_to_frame.bat  mp4_to_frame.sh  opencv_demo_0701.py  opencv_demo_0703.py  request_demo_0809.py  run_candidate_1.bat  run_candidate_2.bat
raspi/: ArduinoCommunicator.cpp  ArduinoCommunicator.hpp  PktArduino.h  PktProtocol.cpp  PktProtocol.h  PythonHttpsRequest.cpp  PythonHttpsRequest.hpp  ServerCommunicator.cpp  ServerCommunicator.hpp  UART.cpp  UART.h  WebcamProcessor.cpp  WebcamProcessor.hpp  debug.h  main.cpp  raspi.sln  raspi.vcxproj
server/: index.html
server/js/: main.js  (+4 more)
(+35 files in other folders)
